# Kokotajlo

./: .gitignore  README.md  deploy.js  deploy.sh  env.local.example  env.railway.example  next-sitemap.config.js  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.js
.cursor/rules/: kokotajlo.mdc  landingpage.mdc
backend/: Dockerfile  env.example  logging_config.py  main.py  nixpacks.toml  pyproject.toml
backend/prompts/: fallback.yaml  system.yaml
docs/: README.md  about.md  analytics.md  backend.md  bilingual.md  blog.md  chatbot.md  contact.md  n8n.md  railway.md  seo.md  styles.md  subpages.md
public/: robots.txt  sitemap-0.xml  sitemap.xml
src/: i18n.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/chat/: route.ts
src/app/api/contact/: route.ts
src/app/contact/: page.tsx
src/app/resources/: page.tsx
src/app/resources/[slug]/: page.tsx
src/app/services/: page.tsx
src/components/: Analytics.tsx  CTAForm.tsx  Chatbot.tsx  ChatbotWrapper.tsx  Footer.tsx  Header.tsx  I18nProvider.tsx  InlineChat.tsx
src/messages/: en.json  fr.json
src/prompts/: system.yaml
