[tool.poetry]
name = "kokotajlo-backend"
version = "0.1.0"
description = "FastAPI backend for AI agent chatbot with OpenAI integration"
authors = ["Tobiasz Bajek <your.email@example.com>", "Mengran <mengran@example.com>"]  # Add this; use real emails or placeholders
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
openai = "^1.51.0"
slowapi = "^0.1.9"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
# HTTP client for n8n webhook
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
# Type stubs for development
types-PyYAML = "^6.0.10.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"